src/chapter_3/snapshots/fatal_creator__chapter_3__test__apply_modifiers_female@Human.snap
---
source: src/chapter_3/mod.rs
expression: a
---
Abilities(
  physique: Physique(
    physical_fitness: 95,
    strength: 70,
    bodily_attractiveness: 103,
    health: 100,
  ),
  charisma: Charisma(
    facial: 103,
    vocal: 100,
    kinetic: 100,
    rhetorical: 100,
  ),
  dexterity: Dexterity(
    hand_eye_coordination: 100,
    agility: 100,
    reaction_speed: 100,
    enunciation: 100,
  ),
  intelligence: Intelligence(
    language: 102,
    math: 97,
    analytic: 97,
    spatial: 100,
  ),
  wisdom: Wisdom(
    drive: 98,
    intuition: 105,
    common_sense: 100,
    reflection: 104,
  ),
  temperament: Temperament(
    sanguine: 102,
    choleric: 98,
    melancholic: 100,
    phlegmatic: 100,
  ),
)
